--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   
   <!-- Google Fonts --> 
   <link href="https://fonts.googleapis.com/css?family=ABeeZee|Halant" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/cont-awesome.css">
+  <link rel="stylesheet" href="css/animate.css">
+  
 </head>
 
 <body>
@@ -30,7 +37,7 @@
     </nav>
     
     <div class="container hero">
-      <h1> Save, share, and collaborate. </h1>
+      <h1 class="animated fadeIn"> Save, share, and collaborate. </h1>
       <p> Crate lets you collect and store information. Create notes, store images, and add links to share with others.</p> 
       <a href="signup.html" class="btn"> Try it out for free!</a>
       <img src="images/site - dashboard.png" alt="Crate" />
