--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <ul class="container">
         <li class="one-third">
           <div class="box">
-            <h3>CASUAL</h3>
+            <h3>Casual</h3>
             <h4>Free</h4>
             <ul>
               <li>Up to 5 crates</li>
@@ -85,11 +85,10 @@
           <a href="signup.html" class="btn"> Try it out for free!</a>
         </div>
       </li>
-      </ul>
 
       <li class="one-third">
         <div class="box middle">
-          <h3>PROFESSIONAL</h3>
+          <h3>Professional</h3>
           <h4><span>$</span>5 <span class="month">/month</span></h4>
             <ul>
               <li>Unlimited crates</li>
@@ -102,7 +101,7 @@
       </li>
       <li class="one-third">
         <div class="box">
-          <h3>EXPERT</h3>
+          <h3>Expert</h3>
           <h4><span>$</span>10 <span class="month">/month</span></h4>
             <ul>
               <li>Unlimited crates</li>
