--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/cont-awesome.css">
+  <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/animate.css">
   
 </head>
@@ -50,15 +50,18 @@
 
   <section class="benefits">
     <ul class="container">
-      <li class="one-third">  
+      <li class="one-third">
+      <i class="fa fa-file-o"></i>  
         <h2>Create Notes</h2>
         <p>Using Markdown, you can create simple text-based documents to save and share. You can collaborate with others to write and edit content.</p>
       </li>
       <li class="one-third">
+       <i class="fa fa-picture-o"></i>
         <h2>Save Images</h2>
         <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within Crate.</p>
       </li>
       <li class="one-third">
+       <i class="fa fa-link"></i>
         <h2>Add Links</h2>
         <p>Forget bookmarking sites in your browser. With Crate, you can add links, group them and view them from any device.</p>
       </li>
@@ -113,6 +116,7 @@
        </div>
       </li>
     </ul>
+    <p class="small"> *We will not collect your credit card information until your 30-day trial has ended.</p>
   </section>
 
 <!-- Testimonials -->
@@ -121,7 +125,7 @@
 
 <div class="container">
   <h2>Who uses Crate?</h2>
-    <p>Create has more than 100,000 satisfied users storing and collaborating<br> with teams across the world. Here's what a few have to say:</p>
+    <p>Crate has more than 100,000 satisfied users storing and collaborating<br> with teams across the world. Here's what a few have to say:</p>
 </div>
   <ul class="container">
     <li class="one-fourth"> 
@@ -129,23 +133,26 @@
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jina/128.jpg" alt="avatar">
     <p class="name"><strong>Lacey D.</strong>Marketing Analyst, Texas</p>
     </li>
+    <div class="staggered">
     <li class="one-fourth"> 
       <blockquote>"Crate has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn’t be easier.</blockquote>
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
     <p class="name"><strong>Andrew S.</strong>Product Manager, New York</p>
     </li>
+    </div>
     <li class="one-fourth"> 
       <blockquote>"Crate has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn’t be easier.</blockquote>
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/vista/128.jpg" alt="avatar">
     <p class="name"><strong>Martha G.</strong>Teacher, New Hampshire</p>
+    </li>
+    <div class="staggered">
     <li class="one-fourth"> 
       <blockquote>"Crate has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn’t be easier.</blockquote>
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/zack415/128.jpg" alt="avatar">
-    <p class="name"><strong>Brian L.</strong>Engineer, Washington</p>
+    <p class="name"><strong>Brian L.</strong>Engineer, Washington D.C. </p>
     </li>
-    </li>
+    </div>
   </ul>
-  </div>
 </section>
 
 <!-- Final Call to Action --> 
