--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
 </section>
 
 <!-- Final Call to Action --> 
-<section class="final call to action">
-  <div class="container">
+<section class="call-to-action">
+  <div class="container-action">
     <h2>Ready to use Crate?</h2>
       <p>Sign up for your free account to experience the benefits of Crate today.</p>
-      <a href="signup.html" class="btn"> Try it out for free!</a>
+   <a href="signup.html" class="btn"> Try it out for free!</a>
   </div>
 </section>
 </main>  
@@ -173,9 +173,9 @@
     </div>
     <nav class="link-block middle-footer-block one-third">
       <ul>
-        <li><a href="">Terms</a></li>
-        <li><a href="">Privacy Policy</a></li>
-        <li><a href="">About Us</a></li>
+        <li><a href="">Terms</a> /</li>
+        <li><a href="">Privacy Policy</a> /</li>
+        <li><a href="">About Us</a> /</li>
         <li><a href="">Twitter</a></li> 
       </ul>
     </nav>
