--- a/allitems.html
+++ b/allitems.html
@@ -30,7 +30,9 @@
       <div class="items">
          <p>Items</p>
             <ul>
+              <div class="active"> 
                <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
+              </div>
                <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
                <li><a href="allimages.html"><i class="fa fa-picture-o"></i> Images</a></li>
                <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
@@ -43,7 +45,18 @@
                <li><a href="#"><i class="fa fa-plus-square-o"></i> Add a new crate</a></li>
             </ul>
      </div>
+
+<!-- SETTINGS -->
+
+<div class="settings">
+   <div class="account">
+      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jina/128.jpg">
+      <p>Felicia Clark</p>
+      <a href="#"><i class="fa fa-cog"></i></a>
+   </div>
+
 </nav>
+</section>
 
 <main role="main">
 
@@ -95,6 +108,19 @@
             </ul>
          </div>
       </div>
+
+       <div class="content-item">
+         <div class="item-box">
+            <h2>Work To Do</h2>
+            <ul>
+               <li>Sprint planning</li>
+               <li>Review test plans</li>
+               <li>Backlog grooming</li>
+               <li>Edit release notes</li>
+            </ul>
+         </div>
+      </div>
+
    </div>
  
     <div class="container">
@@ -115,27 +141,38 @@
             <img src="https://static.pexels.com/photos/4621/fruits-grocery-bananas-market-medium.jpg" alt="Bananas" />
          </div>
       </div>
+      <div class="content-item">
+         <div class="item-box">
+            <img src="https://static.pexels.com/photos/37825/fruit-southern-fruits-whole-fruit-the-interior-of-the-fruit-37825-medium.jpeg" alt="Oranges" />
+         </div>
+      </div>
    </div>
 
     <div class="container">
       <h3>Links</h3>
       <img src="images/Line.png" alt="Line" />
       <div class="content-item">
-         <div class="item-box">
+         <div class="link-box">
             <h2><img class="favicon" src="https://c1.tacdn.com/favicon.ico"><a href="#">tripadvisor.com</a></h2>
             <p>World's Largest Travel Site. 385 million+ unbiased traveler reviews. Search 200+ sites to find the best hotel prices.</p>
          </div>
       </div>
       <div class="content-item">
-         <div class="item-box">
+         <div class="link-box">
             <h2><img class="favicon" src="http://preventcancer.aicr.org/images/content/pagebuilder/pinterest_favicon.png"><a href="#">pinterest.com</a></h2>
             <p>A content sharing service that allows members to "pin" images, videos and other objects to their pinboard.</p>   
          </div>
       </div>
       <div class="content-item">
-         <div class="item-box">
+         <div class="link-box">
             <h2><img class="favicon" src="http://d2i3r43q6ffvz8.cloudfront.net/prod/public/images/min/icons/favicons/fitness/favicon.29e070057a88.ico"><a href="#">mapmyfitness.com</a></h2>
             <p>Uses built in GPS technology to provide runners, cyclists and walkers the ability to map, record and track workouts.</p>
+         </div>
+      </div>
+      <div class="content-item">
+         <div class="link-box">
+            <h2><img class="favicon" src="https://a1.muscache.com/airbnb/static/logotype_favicon-21cc8e6c6a2cca43f061d2dcabdf6e58.ico"><a href="#">airbnb.com</a></h2>
+            <p>Worldwide Accommodations Leader. Find Unique Listings in 30K Cities!</p>
          </div>
       </div>
    </div>
