--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1 class="animated fadeIn"> Save, share, and collaborate. </h1>
       <p> Crate lets you collect and store information. 
       <br>Create notes, store images, and add links <br>to share with others.</p> 
-      <a href="signup.html" class="btn"> Try it out for free!</a>
+      <a href="signup.html" class="btn-hero"> Try it out for free!</a>
       </div>
       <div class="one-half">
       <img src="images/site - dashboard.png" alt="Crate" />
@@ -139,42 +139,40 @@
 
 <section class="testimonials">
 
-  <div class="user-photo-1">
+  <div class="one-third">
     <img src="images/amy-1.png" alt="avatar">
+    <div class="blockquote">
+    <blockquote><span class="quotation">"</span>Crate has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn’t be easier.<span class="quotation">"</span></blockquote>
+    <p>Amy J. - Developer, Washington </p>
+    </div>
   </div>  
-  
-  <div class="user-photo-2">
-      <img src="images/Portrait Middle-1.png" alt="avatar">
-   </div>
-   
-  <div class="user-photo-3"> 
-      <img src="images/Portrait Right-1.png" alt="avatar">
-  </div>
-  
-  <div class="blockquote">
-    <span class="quotation">"</span>Crate has made it easier to find and keep things I love. I can share with other designers on my team <br>and create new categories with awesome stuff. And creating simple text documents couldn’t be easier.<span class="quotation">"</span>
-    <p><strong>Lacey D. - Marketing Analyst, Texas</strong></p>
-  </div>
-  
-  <!--
-  <blockquote><span class="quotation">"</span>Crate has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn’t be easier.<span class="quotation">"</span></blockquote>
-  
-  <blockquote><span class="quotation">"</span>Crate has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn’t be easier.<span class="quotation">"</span></blockquote>
-  
-  <p class="name"><strong>Amy J.</strong>Developer, Washington </p>
-  <p class="name"><strong>Andrew S.</strong>Product Manager, New York</p>
 
+  <div class="one-third">
+    <img src="images/Portrait Middle-1.png" alt="avatar">
+    <div class="blockquote">
+    <blockquote><span class="quotation">"</span>Crate has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn’t be easier.<span class="quotation">"</span></blockquote>
+    <p>Lacey D. - Marketing Analyst, Texas</p>
+    </div>
+  </div>  
 
-  -->
-          
-</section>
+  <div class="one-third">
+    <img src="images/Portrait Right-1.png" alt="avatar">
+    <div class="blockquote">
+    <blockquote><span class="quotation">"</span>Crate has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn’t be easier.<span class="quotation">"</span></blockquote>
+    <p>Andrew S. - Product Manager, New York</p>
+    </div>
+  </div>  
 
+  </section>
+  
+      
 <!-- Final Call to Action --> 
 
 <section class="call-to-action">
   <div class="final">
-    <p><span class="final-call">Ready to use Crate?</span><a href="signup.html" class="btn"> Try it out for free!</a></p>  
-   </div>
+    <h2>Ready to use Crate?</h2>
+    <a href="signup.html" class="btn"> Try it out for free!</a>
+  </div>
 </section>
 
 </main>  
