--- a/allitems.html
+++ b/allitems.html
@@ -18,10 +18,14 @@
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/font-awesome.css">
+<link rel="stylesheet" href="css/dropit.css">
  
 </head>
 
 <body class="dashboard">
+
+ <!-- RESPONSIVE NAV -->
+   <a href="#" class="hamburger" id="menu">&#9776;</a>
 
 <!-- LEFT NAVIGATION MENU -->
 
@@ -45,33 +49,47 @@
                <li><a href="#"><i class="fa fa-plus-square-o"></i> Add a new crate</a></li>
             </ul>
      </div>
-
 </nav>
-</section>
 
 <main role="main">
 
-
-<section class="content">
-
- <!-- SETTINGS -->
-
+  <!-- SETTINGS -->
 <div class="settings">
    <div class="account">
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jina/128.jpg">
       <p>Felicia Clark</p>
-      <a href="#"><i class="fa fa-cog"></i></a>
+      <ul class="menu">
+         <li>
+            <a href="#" class="fa fa-cog"></a>
+            <ul>
+               <li><a href="#"><i class="fa fa-cog"></i> Account Settings</a></li>
+               <li><a href="#"><i class="fa fa-group"></i> Collaborators</a></li>
+               <li><a href="#"><i class="fa fa-sign-out"></i> Sign Out</a></li>
+            </ul>
+         </li>
    </div>
+</div> 
 
-   <!-- CONTENT -->
 
+ <!-- CONTENT -->
+
+ <section class="content">
    <div class="container">
       <div class="header">
          <h1>All Items</h1>
-         <a href="#" class="btn">+ Add</a>
+         <ul class="menu">
+            <li>
+               <a href="#" class="btn">+ Add</a>
+               <ul>
+                  <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
+                  <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
+                  <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+               </ul>
+            </li>
+         </ul>
        </div>
      </div>
-   
+
    <div class="container">
       <h3>Notes</h3>
       <img src="images/Line.png" alt="Line" />
@@ -180,8 +198,16 @@
    </div>
 </section>
 
-</main> 
+</main>
+
+<script src="js/jquery-3.1.1.min.js"></script>
+   <script src="js/dropit.js"></script>
+   <script type="text/javascript">
+     $(".menu").dropit();
+     $( "#menu" ).click(function() {
+         $("#left-nav").toggleClass("open", 200);
+     });
+   </script>
 
 </body>
-
 </html>
