--- a/allitems.html
+++ b/allitems.html
@@ -53,10 +53,7 @@
 
 <main role="main">
 
-  <!-- SETTINGS -->
  
-
-
  <!-- CONTENT -->
 
  <section class="content">
@@ -74,7 +71,7 @@
             </li>
          </ul>
        </div>
-
+</div>
      
     <div class="settings">
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jina/128.jpg">
