--- a/allimages.html
+++ b/allimages.html
@@ -18,10 +18,15 @@
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/font-awesome.css">
+<link rel="stylesheet" href="css/dropit.css">
+
  
 </head>
 
 <body class="dashboard">
+
+<!-- RESPONSIVE NAV -->
+   <a href="#" class="hamburger" id="menu">&#9776;</a>
 
 <!-- LEFT NAVIGATION MENU -->
 
@@ -53,9 +58,33 @@
    <div class="container">
       <div class="header">
          <h1>All Images</h1>
-         <a href="#" class="btn">+ Add</a>
+         <ul class="menu">
+            <li>
+               <a href="#" class="btn">+ Add</a>
+               <ul>
+                  <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
+                  <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
+                  <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+               </ul>
+            </li>
+         </ul>
        </div>
-     </div>
+</div>
+
+      <div class="settings">
+      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jina/128.jpg">
+      <p>Felicia Clark</p>
+      <ul class="menu">
+         <li>
+            <a href="#" class="fa fa-cog"></a>
+            <ul>
+               <li><a href="#"><i class="fa fa-cog"></i> Account Settings</a></li>
+               <li><a href="#"><i class="fa fa-group"></i> Collaborators</a></li>
+               <li><a href="#"><i class="fa fa-sign-out"></i> Sign Out</a></li>
+            </ul>
+         </li>
+       </div>
+       </div>
    
    <div class="container">
 
@@ -136,6 +165,15 @@
 </section>
 
 </main> 
+
+<script src="js/jquery-3.1.1.min.js"></script>
+   <script src="js/dropit.js"></script>
+   <script type="text/javascript">
+     $(".menu").dropit();
+     $( "#menu" ).click(function() {
+         $("#left-nav").toggleClass("open", 200);
+     });
+   </script>
 
 </body>
 
